k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unmsm-cm-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unmsm-cm-app
  template:
    metadata:
      labels:
        app: unmsm-cm-app
    spec:
      containers:
        - name: unmsm-cm-container
          image: 365227208102.dkr.ecr.us-east-2.amazonaws.com/unmsm-cm:latest
          ports:
            - containerPort: 1337
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
