k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: unmsm-cm-service
  namespace: default
spec:
  selector:
    app: unmsm-cm-app
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 1337
  type: ClusterIP
